fix: fixing get bookings for clients and professionals
