# delivery/rest/routes/booking_router.go
@@ -3,20 +3,29 @@ package routes
 import (
 	"1mao/delivery/rest/handlers"
 	"1mao/internal/booking/service"
+	"1mao/internal/middleware"
 
 	"github.com/gorilla/mux"
 )
 
-
 func BookingRoutes(r *mux.Router, bookingService service.BookingService) {
     handler := handlers.NewBookingHandler(bookingService)
 
-    // Rotas fixas devem ser declaradas antes das rotas com parâmetros
-    r.HandleFunc("/bookings/professional", handler.ListProfessionalBookingsHandler).Methods("GET")
-    r.HandleFunc("/bookings/client", handler.ListClientBookingsHandler).Methods("GET")
+    // Rotas para profissionais
+    professionalRouter := r.PathPrefix("/professional").Subrouter()
+    professionalRouter.Use(middleware.AuthMiddleware("professional"))
     
-    // Rotas com parâmetros
-    r.HandleFunc("/bookings", handler.CreateBookingHandler).Methods("POST")
-    r.HandleFunc("/bookings/{id}", handler.GetBookingHandler).Methods("GET")
-    r.HandleFunc("/bookings/{id}/status", handler.UpdateBookingStatusHandler).Methods("PUT")
+    professionalRouter.HandleFunc("/bookings/all", handler.ListProfessionalBookingsHandler).Methods("GET")
+    professionalRouter.HandleFunc("/bookings/{id:[0-9]+}", handler.GetBookingHandler).Methods("GET")
+    professionalRouter.HandleFunc("/bookings/{id:[0-9]+}/status", handler.UpdateBookingStatusHandler).Methods("PUT")
+
+    // Rotas para clientes
+    clientRouter := r.PathPrefix("/client").Subrouter()
+    clientRouter.Use(middleware.AuthMiddleware("user"))
+    clientRouter.HandleFunc("/bookings/all", handler.ListClientBookingsHandler).Methods("GET")
+
+    // Rota compartilhada para criação
+    authRouter := r.PathPrefix("").Subrouter()
+    authRouter.Use(middleware.AuthMiddleware("user", "professional"))
+    authRouter.HandleFunc("/bookings", handler.CreateBookingHandler).Methods("POST")
 }
